Implement account deletion feature and update BROWNIE_GATE_URL for local development

--- a/templates/counter.html
+++ b/templates/counter.html
@@ -14,6 +14,7 @@
             <button onclick="countPressed()">Click</button>
         </div>
         <button onclick="logout()">Logout</button>
+        <button id="remove-acc" onclick="window.location.href = '/delete_account'">Delete account</button>
     </div>
     <script src="{{ url_for('static', filename='js/brownieGateFunctions.js') }}"></script>
 </body>
